# wyse-agent-os

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  Cargo.toml  Dockerfile.rust  PRODUCT.md  TODO.md  config.docker.toml  config.example.toml  docker-compose.yml  skills-lock.json
.github/workflows/: rust.yml
.impeccable/live/: config.json
.superpowers/brainstorm/: .last-token
.superpowers/sdd/: final-fix-report.md  task-2-report.md  task-3-report.md
crates/stratum-agent/: AGENTS.md  Cargo.toml
crates/stratum-agent-builtin/: AGENTS.md  Cargo.toml
crates/stratum-agent-builtin/src/: default_agent.rs
crates/stratum-agent/src/: definition.rs  error.rs  lib.rs  loop.rs
crates/stratum-agent/src/agent_loop/: error.rs  hook.rs  mod.rs  runner.rs  stream.rs  types.rs
crates/stratum-agent/src/tool_executor/: allow_all.rs  approval.rs  definition.rs  deny_all.rs  error.rs  mod.rs
crates/stratum-agent/tests/: agent_loop_kernel.rs  streaming_loop.rs
crates/stratum-api/: AGENTS.md  Cargo.toml
crates/stratum-api/src/: api.rs  error.rs  host.rs  lib.rs  main.rs
crates/stratum-api/tests/: api.rs
crates/stratum-config/: AGENTS.md  Cargo.toml
crates/stratum-config/src/: error.rs  lib.rs
crates/stratum-core/: AGENTS.md  Cargo.toml
crates/stratum-core/src/: agent_loop_event.rs  error.rs  lib.rs
crates/stratum-filesystem/: AGENTS.md  Cargo.toml
crates/stratum-infra/: AGENTS.md  Cargo.toml  Makefile  docker-compose.test.yml
crates/stratum-infra/src/: lib.rs
crates/stratum-infra/src/agent_event_sink/: definition.rs  error.rs  mod.rs  scoped.rs
crates/stratum-infra/src/event_stream_bus/: definition.rs  error.rs  memory.rs  mod.rs  nats.rs
crates/stratum-infra/tests/: event_stream_bus_nats.rs
crates/stratum-llm/: AGENTS.md  Cargo.toml
crates/stratum-store/: AGENTS.md  Cargo.toml
crates/stratum-store/src/: decorator.rs  definition.rs  error.rs  filesystem.rs  lib.rs  state.rs
crates/stratum-store/tests/: decorator.rs  filesystem_store.rs  recovery_composition.rs
crates/stratum-store/tests/support/: mod.rs
crates/stratum-tools/: AGENTS.md  Cargo.toml  Makefile  docker-compose.test.yml
crates/stratum-tools/src/: definition.rs  error.rs  lib.rs
crates/stratum-tools/src/builtin/: apply_patch.rs  file_metadata.rs  filesystem.rs  list_dir.rs  mod.rs  read_file_lines.rs  search_text.rs
crates/stratum-tools/tests/: apply_patch_docker.rs  builtin_registry.rs
crates/wyse-agent/: AGENTS.md  Cargo.toml
crates/wyse-agent-builtin/: AGENTS.md  Cargo.toml
crates/wyse-agent-builtin/src/: default_agent.rs  error.rs  lib.rs
crates/wyse-agent/src/: command.rs  definition.rs  error.rs  lib.rs  loop.rs
crates/wyse-agent/tests/: streaming_loop.rs
crates/wyse-api/: AGENTS.md  Cargo.toml
crates/wyse-api/src/: api.rs  error.rs  host.rs  lib.rs  main.rs
crates/wyse-api/tests/: api.rs
crates/wyse-checkpoint/: Cargo.toml
crates/wyse-checkpoint/src/: definition.rs  error.rs  filesystem.rs  lib.rs  sqlite.rs  state.rs
crates/wyse-checkpoint/tests/: filesystem_checkpoint.rs  recovery_composition.rs
crates/wyse-checkpoint/tests/support/: mod.rs
crates/wyse-config/: AGENTS.md  Cargo.toml
crates/wyse-config/src/: error.rs  lib.rs
crates/wyse-core/: AGENTS.md  Cargo.toml
crates/wyse-filesystem/: AGENTS.md  Cargo.toml
crates/wyse-infra/: Cargo.toml  Makefile  docker-compose.test.yml
crates/wyse-infra/src/: error.rs  event_stream_bus.rs  lib.rs  nats_event_stream_bus.rs
crates/wyse-infra/src/event_stream_bus/: definition.rs  error.rs  memory.rs  mod.rs  nats.rs
crates/wyse-infra/tests/: event_stream_bus_nats.rs
crates/wyse-llm/: AGENTS.md  Cargo.toml
crates/wyse-llm/src/: definition.rs  error.rs  lib.rs  manager.rs  mock.rs  structured_output.rs  tool_call.rs  usage.rs
crates/wyse-llm/src/protocol/: deepseek.rs  mod.rs  openai_compatible.rs
crates/wyse-llm/tests/: deepseek_provider.rs  deepseek_smoke.rs  openai_compatible_provider.rs  openai_compatible_smoke.rs
crates/wyse-ontology/: AGENTS.md  Cargo.toml
crates/wyse-ontology-api/: AGENTS.md  Cargo.toml
crates/wyse-ontology-api/src/: error.rs  instance_routes.rs  lib.rs  schema_routes.rs
crates/wyse-ontology-api/tests/: router.rs
crates/wyse-ontology-mysql/: AGENTS.md  Cargo.toml  Makefile  docker-compose.test.yml
crates/wyse-ontology-mysql/migrations/: 0001_ontology.sql
crates/wyse-ontology-mysql/src/: error.rs  lib.rs  repository.rs
crates/wyse-ontology-mysql/tests/: mysql_repository.rs
crates/wyse-ontology/src/: draft.rs  error.rs  graph.rs  lib.rs  repository.rs  service.rs  value.rs
crates/wyse-ontology/tests/: filesystem_draft_store.rs
crates/wyse-store/: AGENTS.md  Cargo.toml
crates/wyse-store/src/: decorator.rs  definition.rs  error.rs  filesystem.rs  lib.rs  state.rs
crates/wyse-store/tests/: decorator.rs  filesystem_store.rs  recovery_composition.rs
crates/wyse-store/tests/support/: mod.rs
crates/wyse-tools/: AGENTS.md  Cargo.toml  Makefile  docker-compose.test.yml
crates/wyse-tools/src/: definition.rs  error.rs  lib.rs
crates/wyse-tools/src/builtin/: apply_patch.rs  file_metadata.rs  filesystem.rs  list_dir.rs  mod.rs  read_file_lines.rs  search_text.rs
crates/wyse-tools/tests/: apply_patch_docker.rs  builtin_registry.rs
docs/: PROTOCOL.md  agent-builtin-design.md  checkpoint-design.md  ontology-service-design.md  stratum-api-design.md  tool-approval-design.md  wyse-api-design.md
docs/plans/: 2026-07-13-agent-model-composer-implementation.md
docs/stratum/: 2026-07-11-repl-echo-approval-design.md  2026-07-11-repl-file-store-milestone-design.md  2026-07-11-repl-file-store-milestone-plan.md
stratum-web/: AGENTS.md  DESIGN.md  README.md  components.json  package.json  pnpm-lock.yaml  screenshot.mjs  skills-lock.json
stratum-web/app/: app.css  root.tsx  routes.ts
stratum-web/lovable/: DESIGN.md
templates/: default-agent.toml
wyse-web/: .env.example  AGENTS.md  DESIGN.md  Dockerfile  README.md  components.json  package.json  pnpm-lock.yaml  tsconfig.json
wyse-web/app/: app-layout.test.ts  app.css  root.tsx
(+244 files in other folders)
