[workspace]
members = [
    "crates/wyse-agent",
    "crates/wyse-agent-builtin",
    "crates/wyse-store",
    "crates/wyse-core",
    "crates/wyse-filesystem",
    "crates/wyse-infra",
    "crates/wyse-llm",
    "crates/wyse-tools",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT"

[workspace.dependencies]
async-nats = "0.49.1"
async-trait = "0.1.89"
bon = "3.9"
bytes = "1.11.0"
clap = { version = "4.5.49", features = ["derive"] }
chrono = { version = "0.4.45", features = ["serde"] }
futures-core = "0.3.32"
futures-util = "0.3.32"
reqwest = { version = "0.12.25", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
toml = "0.9.8"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7.18"
tracing = "0.1.41"
uuid = { version = "1.23.4", features = ["serde", "std", "v7"] }
wyse-core = { path = "crates/wyse-core" }
wyse-filesystem = { path = "crates/wyse-filesystem" }
wyse-agent = { path = "crates/wyse-agent" }
wyse-store = { path = "crates/wyse-store" }
wyse-infra = { path = "crates/wyse-infra" }
wyse-llm = { path = "crates/wyse-llm" }
wyse-tools = { path = "crates/wyse-tools" }

[workspace.lints.clippy]
correctness = "deny"
suspicious = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
