[workspace]
members = [
    "crates/stratum-api",
    "crates/stratum-agent",
    "crates/stratum-agent-builtin",
    "crates/stratum-store",
    "crates/stratum-core",
    "crates/stratum-config",
    "crates/stratum-filesystem",
    "crates/stratum-infra",
    "crates/stratum-llm",
    "crates/stratum-tools",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT"

[workspace.dependencies]
axum = "0.8.9"
async-nats = "0.49.1"
async-trait = "0.1.89"
bon = "3.9"
bytes = "1.11.0"
clap = { version = "4.5.49", features = ["derive"] }
chrono = { version = "0.4.45", features = ["serde"] }
futures-core = "0.3.32"
futures-util = "0.3.32"
http = "1.3.1"
reqwest = { version = "0.12.25", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
toml = "0.9.8"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7.18"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
uuid = { version = "1.23.4", features = ["serde", "std", "v7"] }
stratum-core = { path = "crates/stratum-core" }
stratum-config = { path = "crates/stratum-config" }
stratum-filesystem = { path = "crates/stratum-filesystem" }
stratum-agent = { path = "crates/stratum-agent" }
stratum-store = { path = "crates/stratum-store" }
stratum-infra = { path = "crates/stratum-infra" }
stratum-llm = { path = "crates/stratum-llm" }
stratum-tools = { path = "crates/stratum-tools" }
stratum-api = { path = "crates/stratum-api" }

[workspace.lints.clippy]
correctness = "deny"
suspicious = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
