[package]
name = "stratum-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
stratum-core.workspace = true
stratum-infra.workspace = true
stratum-llm.workspace = true
stratum-store.workspace = true
stratum-tools.workspace = true

[lints]
workspace = true
