[package]
name = "stratum-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
stratum-agent.workspace = true
stratum-config.workspace = true
stratum-core.workspace = true
stratum-filesystem.workspace = true
stratum-infra.workspace = true
stratum-llm.workspace = true
stratum-store.workspace = true
stratum-tools.workspace = true

[dev-dependencies]
async-trait.workspace = true
tower.workspace = true

[lints]
workspace = true
