[package]
name = "stratum-infra"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-nats.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures-core.workspace = true
futures-util.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
stratum-core.workspace = true

[dev-dependencies]
chrono.workspace = true

[lints]
workspace = true
