[package]
name = "stratum-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
stratum-core.workspace = true
stratum-filesystem.workspace = true
stratum-infra.workspace = true

[dev-dependencies]
futures-util.workspace = true

[lints]
workspace = true
