[package]
name = "stratum-tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
stratum-core.workspace = true
stratum-filesystem = { path = "../stratum-filesystem" }

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
