[package]
name = "wyse-agent-builtin"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
futures-util.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
wyse-agent.workspace = true
wyse-core.workspace = true
wyse-infra.workspace = true
wyse-llm.workspace = true
wyse-tools.workspace = true

[lints]
workspace = true
