[package]
name = "wyse-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
futures-util.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
wyse-core.workspace = true
wyse-infra.workspace = true
wyse-llm.workspace = true
wyse-store.workspace = true
wyse-tools.workspace = true

[dev-dependencies]
async-trait.workspace = true

[lints]
workspace = true
