[package]
name = "wyse-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
http.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
wyse-core.workspace = true
wyse-infra.workspace = true

[lints]
workspace = true
