[package]
name = "wyse-llm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
futures-core.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wyse-core.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
