[package]
name = "wyse-ontology"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
wyse-filesystem.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "sync"] }

[lints]
workspace = true
