[package]
name = "wyse-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
wyse-core.workspace = true
wyse-filesystem.workspace = true
wyse-infra.workspace = true

[dev-dependencies]
futures-util.workspace = true

[lints]
workspace = true
